force-app/main/default/objects/OpportunityLineItem/fields/Periodicity__c.field-meta.xml
<CustomField>
    <fullName>Periodicity__c</fullName>
    <label>Périodicité</label>
    <length>80</length>
    <type>Text</type>
</CustomField>