force-app/main/default/objects/OpportunityLineItem/fields/SubscriptionEndDate__c.field-meta.xml
<CustomField>
    <fullName>SubscriptionEndDate__c</fullName>
    <label>Fin d&#39;abonnement</label>
    <type>Date</type>
</CustomField>